# alphaweave

./: .gitignore  API.md  README.md  context.md  pyproject.toml
alphaweave/: __init__.py  smoke_test.py
docs/: sprint_12_factor_pipeline.md  sprint_13_factor_library.md  sprint_14_risk_model.md  sprint_15_auto_alpha.md  sprint_16_cost_turnover.md  sprint_17_monitoring_dashboards.md  sprint_18_broker_live_stack.md
examples/: auto_multifactor_weights_search.py  auto_sma_crossover_search.py  backtest_with_dashboard.py  buy_and_hold.py  compare_cost_aware_vs_naive.py  cost_aware_multifactor_portfolio.py  cost_aware_rebalance_equal_weight.py  cross_sectional_momentum.py  cross_sectional_momentum_pipeline.py  daily_with_weekly_trend.py  earnings_event_strategy.py  factor_neutral_strategy.py  generate_report.py  intraday_daily_signal.py  live_config_template.yaml  live_mock_runner.py  live_paper_runner.py  live_replay_with_dashboard.py  low_volatility_portfolio.py  multi_factor_composite.py  multi_factor_style_tilt.py  ndx_tqqq_sqqq_regime.py  ndx_tqqq_sqqq_with_corporate_actions.py  pipeline_with_optimizer.py  polars_basic_strategy.py  risk_model_basic.py  risk_parity_portfolio.py  rsi_reversion.py  sma_crossover.py  strategy_custom_metrics_logging.py  strategy_sma_crossover.py  target_vol_min_variance.py  three_day_breakout.py  weekly_rebalance_with_schedule.py
tests/: __init__.py  conftest.py  test_backtester.py  test_backtester_execution.py  test_backtestresult_metrics.py  test_bootstrap_equity.py  test_calendar_alignment.py  test_condition_streak.py  test_frame.py  (+39 more)
(+93 files in other folders)
